--- a/app/src/main/res/layout/choose_road_number_dialog_fragment.xml
+++ b/app/src/main/res/layout/choose_road_number_dialog_fragment.xml
@@ -34,7 +34,7 @@
         android:id="@+id/btAddImage"
         android:layout_width="250dp"
         android:layout_height="80dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
