--- a/app/src/main/res/layout/input__road_number_2.xml
+++ b/app/src/main/res/layout/input__road_number_2.xml
@@ -18,7 +18,7 @@
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Text2"
-        android:textSize="30sp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -33,7 +33,7 @@
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Num1"
-        android:textSize="30sp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Text1" />
 
@@ -48,7 +48,7 @@
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Num2"
-        android:textSize="38sp"
+        android:textSize="38dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Text2"
         app:layout_constraintTop_toTopOf="parent" />
@@ -64,7 +64,7 @@
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Num3"
-        android:textSize="38sp"
+        android:textSize="38dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Num1"
         app:layout_constraintTop_toTopOf="parent" />
@@ -80,7 +80,7 @@
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Text3"
-        android:textSize="38sp"
+        android:textSize="38dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Num2"
         app:layout_constraintTop_toTopOf="parent" />
@@ -96,7 +96,7 @@
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Num4"
-        android:textSize="30sp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Num3" />
 
@@ -112,7 +112,7 @@
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Num5"
-        android:textSize="30sp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Text3"
         app:layout_constraintTop_toTopOf="parent" />
@@ -126,7 +126,7 @@
         android:hint="9"
         android:inputType="text"
         android:maxLength="1"
-        android:textSize="30sp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
