--- a/app/src/main/res/layout/input__road_number_3.xml
+++ b/app/src/main/res/layout/input__road_number_3.xml
@@ -13,12 +13,15 @@
         android:layout_marginStart="6dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
-        android:hint="A"
+        android:fontFamily="@font/roadn_font"
+        android:hint="А"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
-        android:nextFocusForward="@+id/edR3Text2"
-        android:textSize="30dp"
+        android:nextFocusForward="@+id/edR3Num1"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -28,12 +31,15 @@
         android:layout_height="52dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
-        android:hint="A"
+        android:fontFamily="@font/roadn_font"
+        android:hint="А"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
-        android:nextFocusForward="@+id/edR3Num1"
-        android:textSize="30dp"
+        android:nextFocusForward="@+id/edR3Text3"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR3Num3" />
 
@@ -43,12 +49,15 @@
         android:layout_height="0dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num2"
-        android:textSize="38dp"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR3Text1"
         app:layout_constraintTop_toTopOf="parent" />
@@ -59,12 +68,15 @@
         android:layout_height="0dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num3"
-        android:textSize="38dp"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR3Num1"
         app:layout_constraintTop_toTopOf="parent" />
@@ -75,12 +87,15 @@
         android:layout_height="0dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Text3"
-        android:textSize="38dp"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR3Num2"
         app:layout_constraintTop_toTopOf="parent" />
@@ -91,12 +106,15 @@
         android:layout_height="52dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
-        android:hint="A"
+        android:fontFamily="@font/roadn_font"
+        android:hint="М"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num4"
-        android:textSize="30dp"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR3Text2" />
 
@@ -106,12 +124,15 @@
         android:layout_height="52dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num5"
-        android:textSize="30dp"
+        android:textAlignment="center"
+        android:textSize="34dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR3Text3"
         app:layout_constraintTop_toTopOf="parent" />
@@ -122,11 +143,14 @@
         android:layout_height="52dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num6"
-        android:textSize="30dp"
+        android:textAlignment="center"
+        android:textSize="34dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR3Num4"
         app:layout_constraintTop_toTopOf="parent" />
@@ -137,10 +161,13 @@
         android:layout_height="52dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:inputType="text"
         android:maxLength="1"
-        android:textSize="30dp"
+        android:textAlignment="center"
+        android:textSize="34dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
