--- a/app/src/main/res/layout/input__road_number_2.xml
+++ b/app/src/main/res/layout/input__road_number_2.xml
@@ -13,12 +13,15 @@
         android:layout_marginStart="6dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
-        android:hint="A"
+        android:fontFamily="@font/roadn_font"
+        android:hint="А"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
-        android:nextFocusForward="@+id/edR2Text2"
-        android:textSize="30dp"
+        android:nextFocusForward="@+id/edR2Num1"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -28,12 +31,15 @@
         android:layout_height="52dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
-        android:hint="A"
+        android:fontFamily="@font/roadn_font"
+        android:hint="А"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
-        android:nextFocusForward="@+id/edR2Num1"
-        android:textSize="30dp"
+        android:nextFocusForward="@+id/edR2Text3"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Num3" />
 
@@ -43,12 +49,15 @@
         android:layout_height="0dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Num2"
-        android:textSize="38dp"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Text1"
         app:layout_constraintTop_toTopOf="parent" />
@@ -59,12 +68,15 @@
         android:layout_height="0dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Num3"
-        android:textSize="38dp"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Num1"
         app:layout_constraintTop_toTopOf="parent" />
@@ -75,12 +87,15 @@
         android:layout_height="0dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Text3"
-        android:textSize="38dp"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Num2"
         app:layout_constraintTop_toTopOf="parent" />
@@ -91,12 +106,15 @@
         android:layout_height="52dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
-        android:hint="A"
+        android:fontFamily="@font/roadn_font"
+        android:hint="А"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Num4"
-        android:textSize="30dp"
+        android:textAlignment="center"
+        android:textSize="42dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Text2" />
 
@@ -107,12 +125,15 @@
         android:layout_marginStart="8dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR2Num5"
-        android:textSize="30dp"
+        android:textAlignment="center"
+        android:textSize="34dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR2Text3"
         app:layout_constraintTop_toTopOf="parent" />
@@ -123,10 +144,13 @@
         android:layout_height="52dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/roadn_font"
         android:hint="9"
         android:inputType="text"
         android:maxLength="1"
-        android:textSize="30dp"
+        android:textAlignment="center"
+        android:textSize="34dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
