--- a/app/src/main/res/layout/input__road_number_3.xml
+++ b/app/src/main/res/layout/input__road_number_3.xml
@@ -8,45 +8,47 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edR3Text1"
-        android:layout_width="32dp"
+        android:layout_width="30dp"
         android:layout_height="52dp"
         android:layout_marginStart="6dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
         android:fontFamily="@font/roadn_font"
-        android:hint="А"
+        android:hint="М"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num1"
+        android:paddingBottom="6dp"
         android:textAlignment="center"
-        android:textSize="42dp"
+        android:textSize="46dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edR3Text2"
-        android:layout_width="32dp"
+        android:layout_width="30dp"
         android:layout_height="52dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
         android:fontFamily="@font/roadn_font"
-        android:hint="А"
+        android:hint="М"
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Text3"
+        android:paddingBottom="6dp"
         android:textAlignment="center"
-        android:textSize="42dp"
+        android:textSize="46dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR3Num3" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edR3Num1"
-        android:layout_width="28dp"
-        android:layout_height="0dp"
+        android:layout_width="30dp"
+        android:layout_height="60dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
         android:fontFamily="@font/roadn_font"
@@ -55,17 +57,17 @@
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num2"
+        android:paddingBottom="6dp"
         android:textAlignment="center"
-        android:textSize="42dp"
+        android:textSize="50dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/edR3Text1"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/edR3Text1" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edR3Num2"
-        android:layout_width="28dp"
-        android:layout_height="0dp"
+        android:layout_width="30dp"
+        android:layout_height="60dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
         android:fontFamily="@font/roadn_font"
@@ -74,17 +76,17 @@
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num3"
+        android:paddingBottom="6dp"
         android:textAlignment="center"
-        android:textSize="42dp"
+        android:textSize="50dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/edR3Num1"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/edR3Num1" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edR3Num3"
-        android:layout_width="28dp"
-        android:layout_height="0dp"
+        android:layout_width="30dp"
+        android:layout_height="60dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
         android:fontFamily="@font/roadn_font"
@@ -92,17 +94,17 @@
         android:imeOptions="actionNext"
         android:inputType="text"
         android:maxLength="1"
-        android:nextFocusForward="@+id/edR3Text3"
+        android:nextFocusForward="@+id/edR3Text2"
+        android:paddingBottom="6dp"
         android:textAlignment="center"
-        android:textSize="42dp"
+        android:textSize="50dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/edR3Num2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/edR3Num2" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edR3Text3"
-        android:layout_width="32dp"
+        android:layout_width="30dp"
         android:layout_height="52dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
@@ -112,16 +114,18 @@
         android:inputType="text"
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num4"
+        android:paddingBottom="6dp"
         android:textAlignment="center"
-        android:textSize="42dp"
+        android:textSize="46dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edR3Text2" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edR3Num4"
-        android:layout_width="24dp"
-        android:layout_height="52dp"
+        android:layout_width="25dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="4dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
         android:fontFamily="@font/roadn_font"
@@ -131,16 +135,16 @@
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num5"
         android:textAlignment="center"
-        android:textSize="34dp"
+        android:textSize="38dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/edR3Text3"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/edR3Text3" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edR3Num5"
-        android:layout_width="24dp"
-        android:layout_height="52dp"
+        android:layout_width="25dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="4dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
         android:fontFamily="@font/roadn_font"
@@ -149,16 +153,16 @@
         android:maxLength="1"
         android:nextFocusForward="@+id/edR3Num6"
         android:textAlignment="center"
-        android:textSize="34dp"
+        android:textSize="38dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/edR3Num4"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/edR3Num4" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edR3Num6"
-        android:layout_width="24dp"
-        android:layout_height="52dp"
+        android:layout_width="25dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="4dp"
         android:backgroundTint="#00FFFFFF"
         android:ems="10"
         android:fontFamily="@font/roadn_font"
@@ -166,13 +170,11 @@
         android:inputType="text"
         android:maxLength="1"
         android:textAlignment="center"
-        android:textSize="34dp"
+        android:textSize="38dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/edR3Num5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.461" />
+        app:layout_constraintStart_toEndOf="@+id/edR3Num5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
