--- a/app/src/main/res/layout/dialog_choose_road_number.xml
+++ b/app/src/main/res/layout/dialog_choose_road_number.xml
@@ -34,10 +34,9 @@
         android:id="@+id/btAddImage"
         android:layout_width="250dp"
         android:layout_height="80dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btRoadNum3"
-        app:srcCompat="@drawable/back_image" />
+        app:srcCompat="@drawable/im_bmw" />
 </androidx.constraintlayout.widget.ConstraintLayout>
